reduce memory usage & use zgc (#263)
* feat: use zgc

* feat: optimize code

* feat: reduce node used memory